fixed admin dashboard and list so navbar doesnt appear behind card

--- a/src/styles/AdminDashboard.css
+++ b/src/styles/AdminDashboard.css
@@ -8,7 +8,6 @@
 
 .dashboard-div {
   margin-top: 12vh;
-  position: relative;
   height: 80%;
   width: 80%;
   background-color: white; 
